--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/carbonara.html">Carbonara</a></li>
+        <li><a href="./recipes/mac.html">Mac'n'Cheese</a></li>
     </ul>
 </body>
 
